PROJECT(STCostAggregation)
AUX_SOURCE_DIRECTORY(. SOURCE_FILES)
FILE(GLOB HEADER_FILES  *.h)
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})

FIND_PACKAGE(OpenCV REQUIRED) 

if(CMAKE_VERSION VERSION_LESS "2.8.11")
	# Add OpenCV headers location to your include paths
	include_directories(${OpenCV_INCLUDE_DIRS})
endif()

ADD_EXECUTABLE(${EXE_NAME} ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(${EXE_NAME}  ${OpenCV_LIBS})

#INSTALL (TARGETS ${EXE_NAME} DESTINATION bin)
